# Project-A_Code

./: Cargo.toml  README_detailed(1).md
Project-A_Code7/dashboard/: build.rs
Project-A_Code7/dashboard/src/: lib.rs
Project-A_Code7/data/: accel-1.txt  aggregated_accel-1.json  aggregated_accel-1.txt  aggregated_force-1.json  aggregated_force-1.txt  aggregated_thermo-1.txt  buffer_stats.txt  force-1.json  force-1.txt  thermo-1.json  thermo-1.txt
Project-A_Code7/gateway/src/: aggregation.rs  buffer.rs  main.rs  storage.rs
Project-A_Code7/sensor_sim/: Cargo.toml
Project-A_Code7/sensor_sim/src/: thermometer.rs  traits.rs
Project-A_Code7/templates/: home.html
dashboard/: Cargo.toml
dashboard/src/: resource.rs
data/: accel-1.json  accel-1.txt  aggregated_force-1.txt  aggregated_thermo-1.json  force-1.txt  thermo-1.txt
gateway/: Cargo.toml
gateway/src/: main.rs  storage.rs
os_lib/: Cargo.toml
os_lib/src/: queue.rs  queue_noncopy.rs
sensor_sim/src/: accelerometer.rs  force_sensor.rs  lib.rs
