[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
dashboard = { path = "../dashboard" }
sensor_sim = { path = "../sensor_sim" }
hotaru = "0.7"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
ctrlc = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7" 